Fixed overlay positioning on tablet/mobile.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1773,6 +1773,10 @@ hr.line.align-right {
 
   /* NAV */
 
+  .widget.extendednavigation .bk-overlay {
+    top: 38px;
+  }
+
   .widget.extendednavigation {
     display: block;
     width: 100%;
